<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculatorActivity">

    <EditText
        android:id="@+id/calculator_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="41dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="8">

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginEnd="190dp"
                android:layout_weight="2"
                android:text="@string/btn_equal"
                android:textSize="24sp"
                android:onClick="operationFunction"/>

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="2"
                android:onClick="operationFunction"
                android:text="@string/btn_clear"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="8">

            <Button
                android:id="@+id/btn_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:height="75dp"
                android:onClick="operationFunction"
                android:text="@string/btn_one"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:height="75dp"
                android:text="@string/btn_two"
                android:textSize="24sp"
                android:onClick="operationFunction"/>

            <Button
                android:id="@+id/btn_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:height="75dp"
                android:text="@string/btn_three"
                android:textSize="24sp"
                android:onClick="operationFunction"/>

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:height="75dp"
                android:text="@string/btn_divide"
                android:textSize="24sp"
                android:onClick="operationFunction"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="8">

            <Button
                android:id="@+id/btn_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:height="75dp"
                android:text="@string/btn_four"
                android:textSize="24sp"
                android:onClick="operationFunction"/>

            <Button
                android:id="@+id/btn_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:height="75dp"
                android:text="@string/btn_five"
                android:textSize="24sp"
                android:onClick="operationFunction"/>

            <Button
                android:id="@+id/btn_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:height="75dp"
                android:text="@string/btn_six"
                android:textSize="24sp"
                android:onClick="operationFunction"/>

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:height="75dp"
                android:text="@string/btn_minus"
                android:textSize="24sp"
                android:onClick="operationFunction"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="8">

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:height="75dp"
                android:text="@string/btn_seven"
                android:textSize="24sp"
                android:onClick="operationFunction"/>

            <Button
                android:id="@+id/btn_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:height="75dp"
                android:text="@string/btn_eight"
                android:textSize="24sp"
                android:onClick="operationFunction"/>

            <Button
                android:id="@+id/btn_nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:height="75dp"
                android:text="@string/btn_nine"
                android:textSize="24sp"
                android:onClick="operationFunction"/>

            <Button
                android:id="@+id/btn_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:height="75dp"
                android:text="@string/btn_sum"
                android:textSize="24sp"
                android:onClick="operationFunction"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="8">

            <Button
                android:id="@+id/btn_modulous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:height="75dp"
                android:text="@string/btn_modulous"
                android:textSize="24sp"
                android:onClick="operationFunction"/>

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:height="75dp"
                android:text="@string/btn_zero"
                android:textSize="24sp"
                android:onClick="operationFunction"/>

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:height="75dp"
                android:onClick="operationFunction"
                android:text="@string/btn_dot"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:height="75dp"
                android:text="@string/btn_multiply"
                android:textSize="24sp"
                android:onClick="operationFunction"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>