<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="100dp"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/banner"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image_description"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:text="@string/text_view_title"
        android:textSize="36sp"
        android:gravity="center"
        />
</FrameLayout>

    <Button
        android:id="@+id/dice_act_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_1_desc"
        android:text="@string/button_1_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
/>
    <Button
        android:id="@+id/changing_text_color_act_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_2_desc"
        android:text="@string/button_2_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        />

    <Button
        android:id="@+id/composing_mail_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_2_desc"
        android:text="@string/text_view_composing_mail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        />


</RelativeLayout>