<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColorChangingTextActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading_desc"
        android:contentDescription="@string/heading_desc"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:padding="8dp"
        android:background="@color/background_color"/>

    <TextView
        android:id="@+id/textView_changing_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/text_view_changing_color_activity_desc"
        android:padding="16dp"
        android:text="@string/text_view_changing_color_activity"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="48sp" />

    <Button
        android:id="@+id/color_changing_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_name_color_changing_ac"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"/>
</RelativeLayout>