<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComposingMailConstraint">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@color/background_color"
        android:fontFamily="cursive"
        android:text="@string/text_view_composing_mail"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:padding="16dp"
        android:text="@string/text_view_to"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_margin="6dp"
        android:padding="16dp"
        android:text="@string/text_view_subject"
        android:inputType="textEmailSubject"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="397dp"
        android:layout_height="508dp"
        android:layout_margin="6dp"
        android:gravity="top"
        android:inputType="textLongMessage"
        android:padding="16dp"
        android:text="@string/text_view_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="@+id/editText3"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.957"
        app:srcCompat="@android:drawable/ic_menu_send"
        android:contentDescription="@string/send_btn_desc"
        android:backgroundTint="@color/kashmir_green"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
